Added new fields

--- a/app.html
+++ b/app.html
@@ -129,6 +129,30 @@
 						<input type="text" type="text" id="wounds" class="formbold-form-input stat">
 					</div>
 				</div>
+				<div class="formbold-input-flex">
+					<h3>Minis</h3>
+					<div>
+						<label for="leaderWounds" class="formbold-form-label">
+							models
+						</label>
+						<input type="text" type="text" id="invuln" class="formbold-form-input stat">
+					</div>
+					<div>
+						<label for="miniWounds" class="formbold-form-label">
+							Wounds
+						</label>
+						<input type="text" type="text" id="wounds" class="formbold-form-input stat">
+					</div>
+				</div>
+				<div class="formbold-input-flex">
+					<h3>Leader</h3>
+					<div>
+						<label for="leaderWounds" class="formbold-form-label">
+							Wounds
+						</label>
+						<input type="text" type="text" id="wounds" class="formbold-form-input stat">
+					</div>
+				</div>
 				<div class="modifiers">
 					<h3>Defenese Modifiers</h3>
 					<p><label>Save Modifier: <input type="text" id="saveMod"></label>
