Logic for additional models and leaders

--- a/app.html
+++ b/app.html
@@ -130,18 +130,18 @@
 					</div>
 				</div>
 				<div class="formbold-input-flex">
-					<h3>Minis</h3>
+					<h3>Additional Units</h3>
 					<div>
-						<label for="leaderWounds" class="formbold-form-label">
+						<label for="addUnits" class="formbold-form-label">
 							models
 						</label>
-						<input type="text" type="text" id="invuln" class="formbold-form-input stat">
+						<input type="text" type="text" id="addUnits" class="formbold-form-input stat">
 					</div>
 					<div>
-						<label for="miniWounds" class="formbold-form-label">
+						<label for="addUnitsWounds" class="formbold-form-label">
 							Wounds
 						</label>
-						<input type="text" type="text" id="wounds" class="formbold-form-input stat">
+						<input type="text" type="text" id="addUnitsWounds" class="formbold-form-input stat">
 					</div>
 				</div>
 				<div class="formbold-input-flex">
@@ -150,7 +150,7 @@
 						<label for="leaderWounds" class="formbold-form-label">
 							Wounds
 						</label>
-						<input type="text" type="text" id="wounds" class="formbold-form-input stat">
+						<input type="text" type="text" id="leaderWounds" class="formbold-form-input stat">
 					</div>
 				</div>
 				<div class="modifiers">
