Added hit modifier to the webpage. Added a player turn class to keep easier track of the states of all the rolls and values. Implimented to main unit. additional and leaders incoming

--- a/app.html
+++ b/app.html
@@ -66,6 +66,8 @@
 				</div>
 				<div class="modifiers">
 					<h3>Attack Modifiers</h3>
+					<p><label>Hit Modifier: <input type="text" id="hitMod"></label>
+					</p>
 					<p><label>Wound Modifier: <input type="text" id="woundMod"></label>
 					</p>
 					<p>
