Last change to new format

--- a/app.html
+++ b/app.html
@@ -1,6 +1,4 @@
-<html>
-
-<head>
+<html><head>
 	<meta charset="UTF-8">
 	<title>Armed Conflict Mallet 40,000</title>
 	<link href="res/styles.css" rel="stylesheet" type="text/css">
