Add testing data button

--- a/app.html
+++ b/app.html
@@ -173,7 +173,7 @@
 					</p>
 				</div>
 			</div>
-
+			<button class="formbold-btn" id="devTest">Load Test Values</button>
 			<button class="formbold-btn" id="rollButton">Roll</button>
 			</form>
 			<div>
