--- a/app.html
+++ b/app.html
@@ -23,66 +23,66 @@
 				<h3>Attack Stats</h3>
 				<div class="formbold-input-flex">
 					<div>
-						<label for="models" class="formbold-form-label">
+						<label for="attackModels" class="formbold-form-label">
 							Models
 						</label>
-						<input type="text" type="text" id="models" value="1" class="formbold-form-input stat">
+						<input type="text" type="text" id="attackModels" value="1" class="formbold-form-input stat userInput">
 					</div>
 					<div>
 						<label for="attacks" class="formbold-form-label">
 							Attacks
 						</label>
-						<input type="text" type="text" id="attacks" class="formbold-form-input stat">
+						<input type="text" type="text" id="attacks" class="formbold-form-input stat userInput">
 					</div>
 					<div>
 						<label for="skill" class="formbold-form-label">
 							BS/WS
 						</label>
-						<input type="text" type="text" id="skill" class="formbold-form-input stat">
+						<input type="text" type="text" id="skill" class="formbold-form-input stat userInput">
 					</div>
 				</div>
 
 				<div class="formbold-input-flex">
 					<div>
-						<label for="str" class="formbold-form-label">
+						<label for="strength" class="formbold-form-label">
 							Strength
 						</label>
-						<input type="text" type="text" id="str" class="formbold-form-input stat">
+						<input type="text" type="text" id="strength" class="formbold-form-input stat userInput">
 					</div>
 					<div>
 						<label for="ap" class="formbold-form-label">
 							AP
 						</label>
-						<input type="text" type="text" id="ap" class="formbold-form-input stat">
+						<input type="text" type="text" id="ap" class="formbold-form-input stat userInput">
 					</div>
 					<div>
-						<label for="dmg" class="formbold-form-label">
+						<label for="damage" class="formbold-form-label">
 							Damage
 						</label>
-						<input type="text" type="text" id="dmg" class="formbold-form-input stat">
+						<input type="text" type="text" id="damage" class="formbold-form-input stat userInput">
 					</div>
 				</div>
 				<div class="modifiers">
 					<h3>Attack Modifiers</h3>
-					<p><label>Hit Modifier: <input type="text" id="hitMod"></label>
+					<p><label>Hit Modifier: <input type="text" id="hitMod" class="stat userInput"></label>
 					</p>
-					<p><label>Wound Modifier: <input type="text" id="woundMod"></label>
+					<p><label>Wound Modifier: <input type="text" id="woundMod" class="stat userInput" ></label>
 					</p>
 					<p>
-						<label><input type="checkbox" id="devastWound" value="1">Devastating Wounds</label>
+						<label><input type="checkbox" id="devastWound" value="1" class="stat userInput">Devastating Wounds</label>
 					</p>
-					<p><label>Critical Wound :<input type="text" id="woundCrit"></label>
+					<p><label>Critical Wound :<input type="text" id="woundCrit" class="stat userInput"></label>
 					</p>
 					<p>
 						Critical wound rolls:
-						<select id="woundRoll">
+						<select id="woundRoll" class="stat userInput">
 							<option value="NONE">Have no other abilities</option>
 							<option value="mortal+1">Deal 1 mortal wound in addition to regular damage</option>
 						</select>
 					</p>
 					<p>
 						Wound Reroll:
-						<select id="woundReroll">
+						<select id="woundReroll" class="stat userInput">
 							<option value="NONE">No wound rolls</option>
 							<option value="1">Wound rolls of 1</option>
 							<option value="fail">Failed wound rolls</option>
@@ -96,37 +96,37 @@
 				<h3>Defense Stats</h3>
 				<div class="formbold-input-flex">
 					<div>
-						<label for="defModels" class="formbold-form-label">
+						<label for="defenseModels" class="formbold-form-label">
 							Models
 						</label>
-						<input type="text" type="text" id="defModels" value="1" class="formbold-form-input stat">
+						<input type="text" type="text" id="defenseModels" value="1" class="formbold-form-input stat userInput">
 					</div>
 					<div>
-						<label for="tough" class="formbold-form-label">
+						<label for="toughness" class="formbold-form-label">
 							Toughness
 						</label>
-						<input type="text" type="text" id="tough" class="formbold-form-input stat">
+						<input type="text" type="text" id="toughness" class="formbold-form-input stat userInput">
 					</div>
 					<div>
 						<label for="save" class="formbold-form-label">
 							Save
 						</label>
-						<input type="text" type="text" id="save" class="formbold-form-input stat">
+						<input type="text" type="text" id="save" class="formbold-form-input stat userInput">
 					</div>
 				</div>
 
 				<div class="formbold-input-flex">
 					<div>
-						<label for="invuln" class="formbold-form-label">
+						<label for="invulnrable" class="formbold-form-label">
 							Invulnerable
 						</label>
-						<input type="text" type="text" id="invuln" class="formbold-form-input stat">
+						<input type="text" type="text" id="invulnrable" class="formbold-form-input stat userInput">
 					</div>
 					<div>
 						<label for="wounds" class="formbold-form-label">
 							Wounds
 						</label>
-						<input type="text" type="text" id="wounds" class="formbold-form-input stat">
+						<input type="text" type="text" id="wounds" class="formbold-form-input stat userInput">
 					</div>
 				</div>
 				<div class="formbold-input-flex">
@@ -135,13 +135,13 @@
 						<label for="addUnits" class="formbold-form-label">
 							models
 						</label>
-						<input type="text" type="text" id="addUnits" class="formbold-form-input stat">
+						<input type="text" type="text" id="addUnits" class="formbold-form-input stat userInput">
 					</div>
 					<div>
 						<label for="addUnitsWounds" class="formbold-form-label">
 							Wounds
 						</label>
-						<input type="text" type="text" id="addUnitsWounds" class="formbold-form-input stat">
+						<input type="text" type="text" id="addUnitsWounds" class="formbold-form-input stat userInput">
 					</div>
 				</div>
 				<div class="formbold-input-flex">
@@ -150,7 +150,7 @@
 						<label for="leaderWounds" class="formbold-form-label">
 							Wounds
 						</label>
-						<input type="text" type="text" id="leaderWounds" class="formbold-form-input stat">
+						<input type="text" type="text" id="leaderWounds" class="formbold-form-input stat userInput">
 					</div>
 				</div>
 				<div class="modifiers">
