--- a/app.html
+++ b/app.html
@@ -72,7 +72,7 @@
 						<label><input type="checkbox" id="devastWound" value="1" class="stat userInput">Devastating Wounds</label>
 					</p>
 					<p>
-						<label><input type="checkbox" id="lethalHit" value="1" class="stat userInput">Lethal Hit? (this is a checkbox right???)</label>
+						<label><input type="checkbox" id="lethalHit" value="1" class="stat userInput">Lethal Hit? (this is supposed to be a checkbox right???)</label>
 					</p>
 					<p><label>Critical Wound :<input type="number" id="woundCrit" class="stat userInput"></label>
 					</p>
