--- a/app.html
+++ b/app.html
@@ -178,7 +178,7 @@
 			</div>
 			<button class="formbold-btn" id="devTest">Load Test Values</button>
 			<button class="formbold-btn" id="rollButton">Roll</button>
-			<p><label>Total Simulations to run: <input type="number" id="simulations"></label>
+			<p><label>Total Simulations to run:<input type="number" id="simulations">  (unused)</label>
 			</form>
 			<div>
 				<h3>Testing Area:</h3>
