--- a/app.html
+++ b/app.html
@@ -178,10 +178,15 @@
 			</div>
 			<button class="formbold-btn" id="devTest">Load Test Values</button>
 			<button class="formbold-btn" id="rollButton">Roll</button>
-			<p><label>Total Simulations to run:<input type="number" id="simulations">  (unused)</label>
+			<p><label>Total Simulations to run:<input type="number" id="simulations"> </label><br>
+				(Multiple simulations developement in progress...) <br>
+			</p>
 			</form>
-			<div>
-				<h3>Testing Area:</h3>
+			
+			<p id="chartLabel"> This is the area for the chart. It's a test for now to make sure data is being passed to the chart correctly so it displays the results of the turn for now until multiple the simulations logic is finished</p>
+			<canvas id="chartCanvas" width="600" height="300"></canvas>
+			<div id ="resultObj">
+				<h3>Testing Area: (this is the result raw data) </h3>
 				<div id="testArea"></div>
 			</div>
 		</div>
