multiple simul logic finished. Input element on the page to sepecify how many runs

--- a/app.html
+++ b/app.html
@@ -178,7 +178,7 @@
 			</div>
 			<button class="formbold-btn" id="devTest">Load Test Values</button>
 			<button class="formbold-btn" id="rollButton">Roll</button>
-			<p><label>Total Simulations to run:<input type="number" id="simulations"> </label><br>
+			<p><label>Total Simulations to run:<input type="number" id="simulations" value = "30"> </label><br>
 				(Multiple simulations developement in progress...) <br>
 			</p>
 			</form>
