--- a/app.html
+++ b/app.html
@@ -186,7 +186,7 @@
 			<p id="chartLabel"> This is the area for the chart. It's a test for now to make sure data is being passed to the chart correctly so it displays the results of the turn for now until multiple the simulations logic is finished</p>
 			<canvas id="chartCanvas" width="600" height="300"></canvas>
 			<div id ="resultObj">
-				<h3>Testing Area: (this is the result raw data) </h3>
+				<!--<h3>Testing Area: (this is the result raw data) </h3> -->
 				<div id="testArea"></div>
 			</div>
 		</div>
